# dailgt

./: LICENSE  README.md  pyproject.toml
src/dailgt.egg-info/: PKG-INFO  SOURCES.txt
src/danalysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/plots/scatter2d/: line.py
src/stats/: jacknife.py
tests/: plot_test.py  plot_test.txt
