[build-system]
requires = ["setuptools>=61.0", "numpy", "matplotlib", "seaborn"]
build-backend = "setuptools.build_meta"

[project]
name = "dailgt"
version = "0.0.2"
authors = [
  { name="Abhishek Samlodia", email="asamlodia@gmail.com" },
]
description = "A simple python package for data analysis, curve fitting and plotting physics simulation data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/abhisheksamlodia/danalysis"
